--- a/assets/sass/components/_global.scss
+++ b/assets/sass/components/_global.scss
@@ -90,10 +90,11 @@ div.highlight {
 // make SVG twemojis relative to surrounding text
 // https://github.com/twitter/twemoji#inline-styles
 img.emoji {
-  height: 1em;
-  width: 1em;
-  margin: 0 0.05em 0 0.1em;
-  vertical-align: -0.1em;
+  height: 1em !important;
+  width: 1em !important;
+  margin: 0 0.05em 0 0.1em !important;
+  vertical-align: -0.1em !important;
+  display: inline !important;
 }
 
 // white background for entire width content area
